# procimg-grupo4

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
demo/: link_video_demonstracao.txt
entradas/: imagem_dessaturacao_seletiva.avif
src/: procimg_cli.py
src/funcoes/: dessaturacao_seletiva_tagore.py  imports.py  substituicao_de_cor_caio.py
src/procimg/: __init__.py  cli.py  ops.py  utils_cor.py
src/procimg/funcoes/: calcular_estatisticas.py  calcular_estatisticas_ricardo.py  calcular_variacoes.py  compara_canais.py  comparar_canais.py  criar_graficos_dispersao.py  dessaturacao_seletiva.py  dessaturacao_seletiva_tagore.py  dessaturar_cor_seletiva.py  equaliza_canais.py  equalizar_canais.py  gerar_grafico_dispersao.py  isolamento_de_cor_caio.py  isolar_cor.py  mapeamento_cores_renan.py  mapear_cores.py  mudanca_de_cor_lenio.py  mudar_hue.py  realce_de_cor_ricardo.py  separar_canais.py  separar_canais_caio.py  substituicao_de_cor.py  substituicao_de_cor_caio.py  substituir_cor.py
