[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procimg-grupo4"
version = "0.1.0"
description = "Sistema de análise e transformação de cores em imagens digitais (ProcIMG - Grupo 4)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  # Núcleo numérico e imagem
  "numpy>=1.26",
  "opencv-python>=4.9",
  "matplotlib>=3.8",
  "scikit-image>=0.24",
  "Pillow>=10.0",

  # CLI (Typer + Rich)
  "typer>=0.12",
  "rich>=13.0",

  # UI (Streamlit)
  "streamlit>=1.40",
]

[project.scripts]
procimg = "procimg.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["procimg", "procimg.funcoes"]
